2008-06-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Patch.pm (add_diff_directory): If option
	use_dev_null is set, then the label of the "old" file will be
	'/dev/null' if we're creating a new file (instead of using the
	name of the created file, like it's currently done in .diff
	of version "1.0" source packages).
	* scripts/Dpkg/Source/Package/V2.pm (prepare_build): Use the new
	option "use_dev_null" when creating the automatic patch.

2008-06-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm (get_patches): Really
	skip all comments in the series files.

2008-06-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Patch.pm (analyze): Enhance function to
	parse correctly many more patches that are accepted by the patch
	utility itself:
	- ignore/strip carriage return of patches with Windows end of lines
	- accept empty lines as contextual lines (instead of the expected " ")
	- accept spaces as separator between filename and timestamp if
	  there's no tab
	- accept a name that differs on the +++ line if the name in --- is
	  correct, and use the name in +++ if this one exists while the one
	  on --- doesn't.

2008-05-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package.pm (extract): If we extract a
	source package that uses a non-standard (!= 1.0) source package
	then we create debian/source/format to remember it.
	* scripts/dpkg-source.pl: Use debian/source/format as a new source
	of format to try when building the package. Prioritize it lower than
	command line and debian/control but higher than the default build
	formats.
	* man/dpkg-source.1: Document the above changes.

2008-05-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: Factorize calls to
	quilt in a new run_quilt() function. And check only once
	if quilt is available while setting the default value of
	without_quilt option. Last but not least, register properly the