@@ -1,3 +1,11 @@
+2008-06-07  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3/quilt.pm (register_autopatch):
+	Register the newly created patch with quilt only if quilt has
+	already been used to apply the existing patches (or if we don't
+	have any patch yet), otherwise register it manually at the end of
+	the series.
+
 2008-06-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Patch.pm (add_diff_directory): If option
